# searchio

./: .gitignore  PRODUCTION_READINESS_PLAN.md  README.md  __init__.py  config.py  main.py  pyproject.toml
.marcus/: commit_msg.txt  marcus.toml  tmp_commit.bat  verify_import.py  verify_imports.py
.marcus/context/: .project_map_state.json  ARCHITECTURE.md  CONVENTIONS.md  PROJECT_MAP.md  TASKS.md  USER_PREFS.md
.marcus/flows/app_plan/: context.md  flow.toml  prompt.md
.marcus/flows/app_scaffold/: context.md  flow.toml  prompt.md
.marcus/sessions/: 2026-03-19T14-08-22.json  2026-03-19T14-54-23.json  2026-03-19T15-26-13.json  2026-03-24T05-49-29.json  2026-03-24T06-14-06.json  2026-03-24T06-23-27.json  2026-03-24T07-45-35.json  2026-03-24T09-27-07.json  latest.json  sess_1774645783.json  sess_1774647005.json  sess_1775077185.json
core/: __init__.py  background_indexer.py  database.py  indexer.py  search_history.py  size_analyzer.py
gui/: __init__.py  main_window.py  memory_graph_widget.py  treemap_widget.py
searchio/: config.py  main.py
searchio/core/: background_indexer.py  database.py  search_history.py  size_analyzer.py
searchio/gui/: main_window.py  memory_graph_widget.py  treemap_widget.py
tests/: __init__.py  test_config.py  test_database.py  test_indexer.py
